// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Youtube adapter construct builds with attributes 1`] = `
Object {
  "modelState": Object {
    "videoId": "example_video_id",
  },
}
`;

exports[`Youtube adapter construct builds without attributes 1`] = `
Object {
  "modelState": Object {
    "videoId": null,
  },
}
`;

exports[`Youtube adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "videoId": "example_video_id",
  },
}
`;
